# mybuds

./: CLAUDE.md  Cargo.toml  Makefile  README.md  mybuds.desktop
.claude/: settings.local.json
src/: instance_lock.rs  main.rs
src/bluetooth/: connection.rs  l2cap.rs  mod.rs  scanner.rs
src/config/: mod.rs
src/device/: airpods.rs  anc.rs  battery.rs  config.rs  dual_connect.rs  equalizer.rs  gestures.rs  handler.rs  info.rs  mod.rs
src/device/models/: mod.rs
src/protocol/: aap.rs  commands.rs  crc.rs  mod.rs  packet.rs
src/tray/: icon.rs  menu.rs  mod.rs
src/tui/: mod.rs
src/tui/pages/: device_info.rs  dual_connect.rs  gestures.rs  home.rs  mod.rs  settings.rs  sound.rs
src/ui/: mod.rs  theme.rs
src/ui/pages/: device_info.rs  dual_connect.rs  gestures.rs  home.rs  settings.rs  sound.rs
src/ui/widgets/: anc_selector.rs  battery_indicator.rs  mod.rs
