[package]
name = "mybuds"
version = "0.1.0"
edition = "2021"
description = "Desktop manager for Huawei FreeBuds headphones"

[dependencies]
# GUI
iced = { version = "0.13", features = ["tokio", "svg", "image"] }

# Bluetooth (Linux - RFCOMM/SPP via BlueZ)
bluer = { version = "0.17", features = ["bluetoothd", "rfcomm"] }

# System tray (Linux - StatusNotifierItem via D-Bus)
ksni = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CRC
crc = "3"

# Desktop notifications
notify-rust = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Image decoding (matches iced's dependency)
image = { version = "0.24", default-features = false, features = ["png"] }

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
async-trait = "0.1"
libc = "0.2"
